--- a/css/style.css
+++ b/css/style.css
@@ -404,6 +404,8 @@ footer {
     background-color: white;
     position: relative;
     left: 290px;
+    min-height: 100vh; /* Ensure it is at least 100vh */
+    height: auto; /
    
 }
 
