--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,33 @@ body {
     align-items: center;
    
 }
+#categories{
+    margin-top: 70px;
+   
+}
+
+#category{
+    
+    width: 80%;
+    margin: auto;
+   
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5px;
+}
+.mycat{
+    width: 100%;
+    background-color: white;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+.category-image{
+    width: 80%;
+}
 #resultdiv{
     margin-top: 20px;
     width: 100%;
